fixed nav bar working on bg gaps still WIP

--- a/docs/public/styles.css
+++ b/docs/public/styles.css
@@ -1,8 +1,12 @@
 /* General styles */
-body{
+body {
   background-color: #1e6438;
+  margin: 0;
+  padding: 0;
 }
-
+.body-container{
+  margin: 10px;
+}
 .col-10 {
   background-color: #000; 
 }
@@ -26,7 +30,7 @@ h4.text {
 /* Navbar styles */
 .header-container {
   background-color: #1e6438;
-  height: 10vh;
+  height: auto;
 
 }
 .navbar-nav {
@@ -42,27 +46,13 @@ h4.text {
   color: rgb(187, 183, 183) !important;
 }
 
-/* Apply background color for .navbar-collapse on screens 990px and below */
-@media (max-width: 990px) {
-  .navbar-collapse::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 665px;
-    right: 0;
-    bottom: 0;
-    border-radius: 15px;
-    background-color: rgb(0, 0, 0, .85);
-    z-index: 0;
-  }
-  #loginButton {
-    position: relative;
-    z-index: 1; /* Set this value higher than the z-index of the background */
-  }
-  .navbar-nav .nav-link {
-    position: relative;
-    z-index: 1; /* Set this value higher than the z-index of the background */
-  }
+.navbar {
+  background-color: #1e6438; /* Set your desired background color */
+  width: 100%; /* Make the navbar full-width */
+}
+
+.navbar-nav .nav-item {
+  display: inline-block; /* Make each menu item only as wide as its content */
 }
 
 
